scorepage overflow issue solved

--- a/client/src/Components/BarChart/BarChart.css
+++ b/client/src/Components/BarChart/BarChart.css
@@ -1,12 +1,12 @@
 .chart-container {
   display: flex;
   align-items: center;
-
-  width: 70%;
+  justify-content: center;
+  width: 100%;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
   .chart-container {
-    width: 90%;
+    width: 100%;
   }
-}
+} */
