--- a/client/src/pages/ScorePage/ScorePage.module.css
+++ b/client/src/pages/ScorePage/ScorePage.module.css
@@ -90,3 +90,8 @@
   background-color: #636e72;
   color: white;
 }
+@media only screen and (max-width: 600px) {
+  .scoreBox {
+    padding: 8px;
+  }
+}
